# NocturneEngine

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_and_run.sh
assets/shaders/: base_fragment.glsl  base_vertex.glsl
include/: character.h  components.h  entity.h  entity_manager.h  game.h  math.h
include/components/: component_array.h  component_manager.h  components.h
include/core/: handle.h  resource.h  resource_container.h  resource_manager.h  window.h
include/ecs/: component_array.h  component_manager.h  entity_manager.h
include/ecs/components/: camera_component.h  components.h  light_component.h
include/ecs/systems/: input_system.h  rendering_system.h  system.h
include/entities/: actor.h  character.h  entity.h  entity_manager.h
include/events/: event_bus.h  event_manager.h  events.h
include/rendering/: gpu_mesh.h  gpu_texture.h  material.h  mesh.h  meshdata.h  rendering_system.h  shader.h  texture.h  world_environment.h
include/windowing/: window.h
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: entity.cpp  entity_manager.cpp  main.cpp
src/components/: component_manager.cpp
src/core/: window.cpp
src/ecs/systems/: input_system.cpp  rendering_system.cpp
src/entities/: entity.cpp  entity_manager.cpp
src/events/: event_manager.cpp
src/rendering/: rendering_system.cpp  shader.cpp
src/windowing/: window.cpp
